--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,7 @@ platformdirs==3.1.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 psutil==5.9.4
-psycopg2-binary==2.9.3
+psycopg2-binary
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
